Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/typevars/5061359/T5061359.out
T5061359.java:11:10: compiler.err.ref.ambiguous: Inner, kindname.class, Base.Inner, Base, kindname.class, Intf.Inner, Intf
1 error
